--- a/portfolio_react/package.json
+++ b/portfolio_react/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lazy": "^1.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
+    "swiper": "^9.3.2",
     "vite-plugin-sass-dts": "^1.3.6"
   },
   "devDependencies": {
