--- a/portfolio_react/package.json
+++ b/portfolio_react/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "swiper": "^9.3.2",
+    "vite-plugin-optimizer": "^1.4.2",
     "vite-plugin-sass-dts": "^1.3.6"
   },
   "devDependencies": {
