--- a/portfolio_react/package.json
+++ b/portfolio_react/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "lazy": "^1.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
+    "react-wow": "^1.0.0",
     "swiper": "^9.3.2",
     "vite-plugin-optimizer": "^1.4.2",
-    "vite-plugin-sass-dts": "^1.3.6"
+    "vite-plugin-sass-dts": "^1.3.6",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
