--- a/portfolio_react/package.json
+++ b/portfolio_react/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
+    "emailjs-com": "^3.2.0",
     "lazy": "^1.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "react-wow": "^1.0.0",
