--- a/portfolio_react/package.json
+++ b/portfolio_react/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
+    "react-scroll": "^1.8.9",
     "react-wow": "^1.0.0",
     "swiper": "^9.3.2",
     "vite-plugin-optimizer": "^1.4.2",
